# MWC26-TalentArena-OC-Workshop

./: README.md  build_gpt.ipynb  init.sh  main.py  pyproject.toml
arch/: attention.py  ff.py  model.py  norm.py  transformer.py
generation/: __init__.py
