[project]
name = "mwc26-talentarena-oc-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "numpy>=2.4.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
